--- a/018_DJANGO-CRUD/myapp/templates/index.html
+++ b/018_DJANGO-CRUD/myapp/templates/index.html
@@ -4,10 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-5 mx-auto card p-5 mt-5">
+                <h2>Registrationf Form</h2>
+                <hr>
+                <span class="text-success">{{msg}}</span>
+                <form action="{%url 'reg'%}" method="post">
+                    {%csrf_token%}
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="name" placeholder="Enter name" class="form-control">
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Enter email" class="form-control">
+                    </div>
+                    <br>
+
+                    <div class="form-group">
+                        <label for="phone">Phone</label>
+                        <input type="text" name="phone" id="phone" placeholder="Enter phone" class="form-control">
+                    </div>
+
+                    <br>
+                    <div class="form-group">
+                        <label for="age">Age</label>
+                        <input type="text" name="age" id="age" placeholder="Enter age" class="form-control">
+                    </div>
+                    <br>
+                    <input type="submit" class="btn btn-success">
+                    <input type="reset" class="btn btn-primary">
+                    <a href="{%url 'display'%}">View all Students</a>
+                </form>
+
+
+            </div>
+        </div>
+    </div>
 
 </body>
 
