--- a/018_DJANGO-CRUD/myapp/templates/update.html
+++ b/018_DJANGO-CRUD/myapp/templates/update.html
@@ -14,36 +14,36 @@
     <div class="container">
         <div class="row">
             <div class="col-5 mx-auto card p-5 mt-5">
-                <h2>Registrationf Form</h2>
+                <h2>Update Form</h2>
                 <hr>
                 <span class="text-success">{{msg}}</span>
-                <form action="{%url 'reg'%}" method="post" enctype="multipart/form-data">
+                <form action="{%url 'update'%}" method="post">
                     {%csrf_token%}
+                    <input type="hidden" value="{{student.id}}" name="sid">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" name="name" id="name" placeholder="Enter name" class="form-control">
+                        <input type="text" name="name" id="name" placeholder="Enter name" class="form-control"
+                            value="{{student.name}}">
                     </div>
                     <br>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="Enter email" class="form-control">
+                        <input type="text" name="email" id="email" placeholder="Enter email" class="form-control"
+                            value="{{student.email}}">
                     </div>
                     <br>
 
                     <div class="form-group">
                         <label for="phone">Phone</label>
-                        <input type="text" name="phone" id="phone" placeholder="Enter phone" class="form-control">
+                        <input type="text" name="phone" id="phone" placeholder="Enter phone" class="form-control"
+                            value="{{student.phone}}">
                     </div>
 
                     <br>
                     <div class="form-group">
                         <label for="age">Age</label>
-                        <input type="text" name="age" id="age" placeholder="Enter age" class="form-control">
-                    </div>
-                    <br>
-                    <div class="form-group">
-                        <label for="img">Profile Picture</label>
-                        <input type="file" name="img" id="img" class="form-control">
+                        <input type="text" name="age" id="age" placeholder="Enter age" class="form-control"
+                            value="{{student.age}}">
                     </div>
                     <br>
                     <input type="submit" class="btn btn-success">
