--- a/018_DJANGO-CRUD/myapp/templates/reg.html
+++ b/018_DJANGO-CRUD/myapp/templates/reg.html
@@ -14,41 +14,38 @@
     <div class="container">
         <div class="row">
             <div class="col-5 mx-auto card p-5 mt-5">
-                <h2>Registration Form</h2>
+                <h2>User Registrationf Form</h2>
                 <hr>
                 <span class="text-success">{{msg}}</span>
-                <form action="{%url 'reg'%}" method="post" enctype="multipart/form-data">
+                <form action="" method="post">
                     {%csrf_token%}
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" name="name" id="name" placeholder="Enter name" class="form-control">
+                        <label for="uname">username</label>
+                        <input type="text" name="uname" id="uname" placeholder="Enter username" class="form-control">
                     </div>
                     <br>
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="Enter email" class="form-control">
+                        <label for="fname">Firstname</label>
+                        <input type="text" name="fname" id="fname" placeholder="Enter Firstname" class="form-control">
                     </div>
                     <br>
 
                     <div class="form-group">
-                        <label for="phone">Phone</label>
-                        <input type="text" name="phone" id="phone" placeholder="Enter phone" class="form-control">
+                        <label for="lname">Lastname</label>
+                        <input type="text" name="lname" id="lname" placeholder="Enter Lastname" class="form-control">
                     </div>
 
                     <br>
                     <div class="form-group">
-                        <label for="age">Age</label>
-                        <input type="text" name="age" id="age" placeholder="Enter age" class="form-control">
+                        <label for="pass">Password</label>
+                        <input type="password" name="pass" id="pass" placeholder="Enter Password" class="form-control">
                     </div>
-                    <br>
-                    <div class="form-group">
-                        <label for="img">Profile Picture</label>
-                        <input type="file" name="img" id="img" class="form-control">
-                    </div>
+
+
                     <br>
                     <input type="submit" class="btn btn-success">
                     <input type="reset" class="btn btn-primary">
-                    <a href="{%url 'display'%}">View all Students</a>
+                    <a href="{%url 'userlogin'%}">Already Registered? Login here</a>
                 </form>
 
 
