--- a/018_DJANGO-CRUD/myapp/templates/reg.html
+++ b/018_DJANGO-CRUD/myapp/templates/reg.html
@@ -7,6 +7,28 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <style>
+        .messages {
+            list-style-type: none;
+            padding: 0;
+        }
+        .messages li {
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+        .messages li.success {
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+        .messages li.error {
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
+        
+    </style>
 </head>
 
 <body>
@@ -16,7 +38,17 @@
             <div class="col-5 mx-auto card p-5 mt-5">
                 <h2>User Registrationf Form</h2>
                 <hr>
-                <span class="text-success">{{msg}}</span>
+
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                        {% endfor %}
+                </ul>
+                {% endif %}
+
+
+
                 <form action="" method="post">
                     {%csrf_token%}
                     <div class="form-group">
