--- a/000_project/myapp/templates/index.html
+++ b/000_project/myapp/templates/index.html
@@ -26,38 +26,16 @@
     <h3 class="section__title"><span>Popular</span> Categories</h3>
     <div class="categories__container swiper">
       <div class="swiper-wrapper">
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-1.jpg" alt="" class="category__img" />
-          <h3 class="category__title">T-Shirt</h3>
+        <a href="{%url 'index'%}?cid=0" class="category__item swiper-slide">
+          <img src="" alt="" class="category__img" />
+          <h3 class="category__title">ALL</h3>
         </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-2.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Bags</h3>
+        {%for category in categories%}
+        <a href="{%url 'index'%}?cid={{category.id}}" class="category__item swiper-slide">
+          <img src="media/{{category.image}}" alt="{{category.image}}" class="category__img" />
+          <h3 class="category__title">{{category.name}}</h3>
         </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-3.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Sandal</h3>
-        </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-4.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Scarf Cap</h3>
-        </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-5.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Shoes</h3>
-        </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-6.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Pillowcase</h3>
-        </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-7.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Jumpsuit</h3>
-        </a>
-        <a href="shop.html" class="category__item swiper-slide">
-          <img src="static/assets/img/category-8.jpg" alt="" class="category__img" />
-          <h3 class="category__title">Hats</h3>
-        </a>
+        {%endfor%}
       </div>
 
       <div class="swiper-button-prev">
@@ -80,11 +58,12 @@
     <div class="tab__items">
       <div class="tab__item active-tab" content id="featured">
         <div class="products__container grid">
+          {%for product in products%}
           <div class="product__item">
             <div class="product__banner">
               <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-1-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-1-2.jpg" alt="" class="product__img hover" />
+                <img src="media/{{product.image}}" alt="{{product.image}}" class="product__img default" />
+                <img src="media/{{product.image}}" alt="{{product.image}}" class="product__img hover" />
               </a>
               <div class="product__actions">
                 <a href="#" class="action__btn" aria-label="Quick View">
@@ -97,12 +76,12 @@
                   <i class="fi fi-rs-shuffle"></i>
                 </a>
               </div>
-              <div class="product__badge light-pink">Hot</div>
+
             </div>
             <div class="product__content">
-              <span class="product__category">Clothing</span>
+              <span class="product__category">{{product.category}}</span>
               <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
+                <h3 class="product__title">{{product.name}}</h3>
               </a>
               <div class="product__rating">
                 <i class="fi fi-rs-star"></i>
@@ -112,293 +91,15 @@
                 <i class="fi fi-rs-star"></i>
               </div>
               <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
+                <span class="new__price">${{product.price}}</span>
+
               </div>
               <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
                 <i class="fi fi-rs-shopping-bag-add"></i>
               </a>
             </div>
           </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-2-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-2-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-              <div class="product__badge light-green">Hot</div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-3-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-3-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-              <div class="product__badge light-orange">Hot</div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-4-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-4-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-              <div class="product__badge light-blue">Hot</div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-5-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-5-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-              <div class="product__badge light-blue">-30%</div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-6-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-6-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-              <div class="product__badge light-blue">-22%</div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-7-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-7-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-              <div class="product__badge light-green">-22%</div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
-          <div class="product__item">
-            <div class="product__banner">
-              <a href="details.html" class="product__images">
-                <img src="static/assets/img/product-8-1.jpg" alt="" class="product__img default" />
-                <img src="static/assets/img/product-8-2.jpg" alt="" class="product__img hover" />
-              </a>
-              <div class="product__actions">
-                <a href="#" class="action__btn" aria-label="Quick View">
-                  <i class="fi fi-rs-eye"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Add to Wishlist">
-                  <i class="fi fi-rs-heart"></i>
-                </a>
-                <a href="#" class="action__btn" aria-label="Compare">
-                  <i class="fi fi-rs-shuffle"></i>
-                </a>
-              </div>
-            </div>
-            <div class="product__content">
-              <span class="product__category">Clothing</span>
-              <a href="details.html">
-                <h3 class="product__title">Colorful Pattern Shirts</h3>
-              </a>
-              <div class="product__rating">
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-                <i class="fi fi-rs-star"></i>
-              </div>
-              <div class="product__price flex">
-                <span class="new__price">$238.85</span>
-                <span class="old__price">$245.8</span>
-              </div>
-              <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
-                <i class="fi fi-rs-shopping-bag-add"></i>
-              </a>
-            </div>
-          </div>
+          {%endfor%}
         </div>
       </div>
       <div class="tab__item" content id="popular">
