--- a/000_project/myapp/templates/base.html
+++ b/000_project/myapp/templates/base.html
@@ -15,7 +15,8 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="static/assets/css/styles.css" />
-
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>Eshop | {%block title%}{%endblock%}</title>
 </head>
 
