--- a/eshop/myapp/templates/login-register.html
+++ b/eshop/myapp/templates/login-register.html
@@ -26,6 +26,7 @@
           <input type="password" placeholder="Your Password" name="password" class="form__input" />
           <div class="form__btn">
             <button class="btn" type="submit">Login</button>
+            <a href="{%url 'forgotpassword'%}">Forgot password</a>
           </div>
         </form>
       </div>
